--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -64,7 +64,7 @@
         <div class="container fade-in-section mt-4 mb-5">
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="images/about.jpg"
+                    <img src="./images/about.jpg"
                         alt="About Us" class="img-fluid rounded-4 shadow-lg">
                 </div>
                 <div class="col-lg-6 ps-lg-5">
@@ -95,7 +95,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <a href="index.html" class="footer-logo">
-                        <img src="images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
+                        <img src="./images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
                         WanderWave
                     </a>
                     <p class="mt-3 pe-4">Escape the bustling city and embark on a journey to discover your inner peace
@@ -150,7 +150,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
