--- a/destinations.html
+++ b/destinations.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -83,7 +83,7 @@
                     <div class="custom-card">
                         <div class="card-img-wrapper">
                             <span class="card-badge">Featured</span>
-                            <img src="images/dest1.jpg"
+                            <img src="./images/dest1.jpg"
                                 class="card-img-top" alt="Destination">
                             <a href="packages.html" class="action-btn"><i class="fas fa-arrow-right"></i></a>
                             <div class="card-details-overlay">
@@ -100,7 +100,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="custom-card">
                         <div class="card-img-wrapper">
-                            <img src="images/dest2.jpg"
+                            <img src="./images/dest2.jpg"
                                 class="card-img-top" alt="Destination">
                             <a href="packages.html" class="action-btn"><i class="fas fa-arrow-right"></i></a>
                             <div class="card-details-overlay">
@@ -118,7 +118,7 @@
                     <div class="custom-card">
                         <div class="card-img-wrapper">
                             <span class="card-badge">Popular</span>
-                            <img src="images/dest3.jpg"
+                            <img src="./images/dest3.jpg"
                                 class="card-img-top" alt="Destination">
                             <a href="packages.html" class="action-btn"><i class="fas fa-arrow-right"></i></a>
                             <div class="card-details-overlay">
@@ -135,7 +135,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="custom-card">
                         <div class="card-img-wrapper">
-                            <img src="images/dest4.jpg"
+                            <img src="./images/dest4.jpg"
                                 class="card-img-top" alt="Destination">
                             <a href="packages.html" class="action-btn"><i class="fas fa-arrow-right"></i></a>
                             <div class="card-details-overlay">
@@ -152,7 +152,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="custom-card">
                         <div class="card-img-wrapper">
-                            <img src="images/dest5.jpg"
+                            <img src="./images/dest5.jpg"
                                 class="card-img-top" alt="Destination">
                             <a href="packages.html" class="action-btn"><i class="fas fa-arrow-right"></i></a>
                             <div class="card-details-overlay">
@@ -169,7 +169,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="custom-card">
                         <div class="card-img-wrapper">
-                            <img src="images/dest6.jpg"
+                            <img src="./images/dest6.jpg"
                                 class="card-img-top" alt="Destination">
                             <a href="packages.html" class="action-btn"><i class="fas fa-arrow-right"></i></a>
                             <div class="card-details-overlay">
@@ -197,7 +197,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <a href="index.html" class="footer-logo">
-                        <img src="images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
+                        <img src="./images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
                         WanderWave
                     </a>
                     <p class="mt-3 pe-4">Escape the bustling city and embark on a journey to discover your inner peace
@@ -252,7 +252,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
