--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <style>
         .gallery-item {
             overflow: hidden;
@@ -114,42 +114,42 @@
             <div class="row masonry-grid">
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="images/hero-bg.jpg"
+                        <img src="./images/hero-bg.jpg"
                             alt="Gallery">
                         <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="images/dest1.jpg"
+                        <img src="./images/dest1.jpg"
                             alt="Gallery">
                         <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="images/about.jpg"
+                        <img src="./images/about.jpg"
                             alt="Gallery">
                         <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="images/dest2.jpg"
+                        <img src="./images/dest2.jpg"
                             alt="Gallery">
                         <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="images/dest3.jpg"
+                        <img src="./images/dest3.jpg"
                             alt="Gallery">
                         <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="gallery-item">
-                        <img src="images/page-header.jpg"
+                        <img src="./images/page-header.jpg"
                             alt="Gallery">
                         <div class="gallery-overlay"><i class="fas fa-search-plus"></i></div>
                     </div>
@@ -168,7 +168,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <a href="index.html" class="footer-logo">
-                        <img src="images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
+                        <img src="./images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
                         WanderWave
                     </a>
                     <p class="mt-3 pe-4">Escape the bustling city and embark on a journey to discover your inner peace
@@ -223,7 +223,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
