--- a/packages.html
+++ b/packages.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
                     <div class="custom-card h-100 d-flex flex-column">
                         <div class="card-img-wrapper" style="height: 250px;">
                             <span class="card-badge bg-warning text-dark">Best Value</span>
-                            <img src="images/dest1.jpg"
+                            <img src="./images/dest1.jpg"
                                 class="card-img-top" alt="Package">
                         </div>
                         <div class="p-4 d-flex flex-column flex-grow-1 bg-white">
@@ -95,7 +95,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="custom-card h-100 d-flex flex-column">
                         <div class="card-img-wrapper" style="height: 250px;">
-                            <img src="images/dest3.jpg"
+                            <img src="./images/dest3.jpg"
                                 class="card-img-top" alt="Package">
                         </div>
                         <div class="p-4 d-flex flex-column flex-grow-1 bg-white">
@@ -121,7 +121,7 @@
                     <div class="custom-card h-100 d-flex flex-column">
                         <div class="card-img-wrapper" style="height: 250px;">
                             <span class="card-badge bg-danger text-white">Premium</span>
-                            <img src="images/dest2.jpg"
+                            <img src="./images/dest2.jpg"
                                 class="card-img-top" alt="Package">
                         </div>
                         <div class="p-4 d-flex flex-column flex-grow-1 bg-white">
@@ -152,7 +152,7 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6">
                     <a href="index.html" class="footer-logo">
-                        <img src="images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
+                        <img src="./images/logo.jpg" alt="Logo" class="img-fluid" style="height:40px;">
                         WanderWave
                     </a>
                     <p class="mt-3 pe-4">Escape the bustling city and embark on a journey to discover your inner peace
@@ -207,7 +207,7 @@
     <!-- Bootstrap 5 JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script src="js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
